# flower_simluation_research

examples/: .gitignore
examples/pytorch-from-centralized-to-federated/: cifar.py  client.py  server.py
examples/quickstart-pytorch/: pyproject.toml
examples/quickstart-pytorch-edit/: pyproject.toml
examples/quickstart-pytorch-edit-carefully/: pyproject.toml  run_fl_exps.sh
examples/quickstart-pytorch-edit-carefully/pytorchexample/: client_app.py  server_app.py  strategy.py  task.py
examples/quickstart-pytorch-edit/pytorchexample/: server_app.py  strategy.py  task.py
examples/quickstart-pytorch/pytorchexample/: client_app.py  server_app.py  task.py
src/py/: README.md  orchid_logger.py  requirements.txt  sim.py  utils.py
src/py/flwr/common/: orchid_logger.py
src/py/flwr/simulation/ray_transport/: ray_client_proxy.py
src/py/time_log/: 20240804_flwsim_vs_orchid.py  x_event_names.py
